Fix bottom margin in popups on mobile

--- a/css/_Popup.scss
+++ b/css/_Popup.scss
@@ -65,7 +65,6 @@
 	@include flex-direction(column);
 	max-width: 30em;
 	min-height: 20em;
-	padding-bottom: 0;
 	width: 28em;
 }
 .Popup-content--press,
@@ -138,7 +137,6 @@
 	display: inline-block;
 	font-size: 1.5em;
 	line-height: 1;
-	margin-bottom: 1em;
 	margin-top: 1em;
 	transition-property: color, text-shadow;
 	transition-duration: $transition-duration / 2;
